# BMSTU-CG-CP

./: README.md  reps.txt  курсовая.txt
code/: CMakeLists.txt  lab_03.pro  main.cpp
code/camera/: Camera.cpp  Camera.h
code/cg_course/: CMakeLists.txt  main.cpp
code/cg_course/Commands/: Commands.cpp  Commands.h
code/cg_course/Drawer/: Drawer.cpp  Drawer.h
code/cg_course/Errors/: Errors.cpp  Errors.h
code/cg_course/Manager/: SceneManager.h
code/cg_course/Math/: GeometryPrimitives.cpp  GeometryPrimitives.h  Matrix.h  Transformation.cpp  Transformation.h  Vec.h
code/cg_course/Objects/: Camera.cpp  Camera.h  Light.cpp  Light.h  Model.cpp  Model.h  OBJ_Loader.h  Properies.h  Textures.cpp  Textures.h  loader.cpp
code/cg_course/Render/: Render.cpp  Render.h
code/cg_course/Scene/: Scene.cpp  Scene.h
code/cg_course/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
code/cg_course/models/: conus.mtl  cube_new.mtl
code/commands/: BaseCommand.h  Commands.cpp  Commands.h
code/creators/: BuilderCreators.cpp  BuilderCreators.h  CommandCreators.cpp  CommandCreators.h  Creator.h  DirectorCreators.cpp  DirectorCreators.h  FabricCreator.cpp  FabricCreator.h  LoaderCreators.cpp  LoaderCreators.h  QtToolCreators.cpp  QtToolCreators.h  VisitorCreators.cpp  VisitorCreators.h
code/data/: cube.txt
code/draw/: DrawTools.h  Drawer.cpp  Drawer.h  QtDrawTools.cpp  QtDrawTools.h
code/errors/: Error.cpp  Error.h
code/managers/: BaseManager.h  Managers.cpp  Managers.h
code/model/: Coord.h  Model.cpp  Model.h  primitives.cpp  primitives.h
code/objects/: CompositeObject.cpp  CompositeObject.h  SceneObjects.h  SimpleObject.h
code/qt_files/: mainwindow.cpp  mainwindow.h  mainwindow.ui
code/scene/: BaseScene.h  Scene.cpp  Scene.h  SceneInterface.cpp  SceneInterface.h
code/solution/: BuilderSolution.cpp  BuilderSolution.h  DirectorSolution.cpp  DirectorSolution.h  FabricSolution.cpp  FabricSolution.h  LoaderSolution.cpp  LoaderSolution.h  Solution.h
code/visitor/: DrawVisitor.cpp  DrawVisitor.h  ObjectVisitor.h  TransformVisitor.cpp  TransformVisitor.h
docs/: 00-title.tex  03-intro.tex  10-analysis.tex  20-design.tex  50-conclusion.tex  60-bibliography.tex  TZ_kursovaya (1).docx  analysis.aux  analysis.tex  conclusion.aux  conclusion.tex  design.aux  design.tex  implement.aux  implement.tex  intro.aux  intro.tex  lib.aux  lib.tex  library.bib  main.tex  main.toc  preambule.tex  report.aux  report.bbl  report.blg  report.out  report.tex  report.toc  research.aux  research.tex  settings.tex  summer_report.tex  summer_report_old.tex  test.tex  title.tex  tz1.doc  tz2.doc  Волков КР ИУ7-51Б.pptx  Преза (1).docx  (+1 more)
docs/img/: intersect.ppm
docs/other/: trace_diag.xml
docs/tex/: biblio.bib  coursework.tex
